# feature-splatting

./: .gitignore  README.md  pyproject.toml
feature_splatting/: feature_extractor.py  feature_extractor_cfg.py  feature_splatting_config.py  feature_splatting_datamgr.py  model.py
feature_splatting/utils/: __init__.py  clip_text_encoder.py  decoder_utils.py  gaussian_editor.py  math_utils.py  segment_utils.py  viewer_utils.py
feature_splatting/utils/mpm_engine/: mesh_io.py  mpm_solver.py
