[project]
name = "feature_splatting"
version = "0.0.2"
description = "Feature Splatting"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["gaussian splatting", "feature fields", "physics simulation", "3D segmentation"]
authors = [
    { name = "Ri-Zhao Qiu", email = "riqiu@ucsd.edu" },
]

dependencies = [
    "einops",
    "ftfy",
    "gdown",
    "matplotlib",
    "nerfstudio",
    "numpy",
    "gsplat>=1.0.0",
    "pillow",
    "regex",
    "torchtyping",
    "tqdm",
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
    "MobileSAMV2 @ git+https://github.com/RogerQi/MobileSAMV2.git",
    "maskclip_onnx @ git+https://github.com/RogerQi/maskclip_onnx.git",
    "taichi",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[tool.black]
line-length = 120

[project.urls]
"Homepage" = "https://feature-splatting.github.io"
"Source" = "https://github.com/vuer-ai/feature-splatting"

[project.entry-points."nerfstudio.method_configs"]
feature-splatting = "feature_splatting.feature_splatting_config:feature_splatting_method"

[tool.setuptools.packages]
find = { include = ["feature_splatting", "feature_splatting.*"] }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
